--- a/cart.html
+++ b/cart.html
@@ -20,12 +20,11 @@
             
             <div id="navbar">
                 <ul id="navilist">
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <!-- <li><a href="#">Shop</a></li> -->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="shop.html">Shop</a></li>
                     <li><a href="about.html">About</a></li>
-                    
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+                    <li><a class="active" href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
             </div>
 
