--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@
                     <li><a href="shop.html">Shop</a></li>
                     <li><a class="active" href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="login.html">Log in / Sign up</a></li>
                     <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
             </div>
