--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                     <li><a class="active" href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="about.html">About</a></li>
-                    
                     <li><a href="contact.html">Contact</a></li>
+                    <li><a href="login.html">Log in / Sign up</a></li>
+                    <li><a href="myprofile.html"><i class="fas fa-user"></i></a></li>
                     <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
                 </ul>
             </div>
