--- a/myprofile.html
+++ b/myprofile.html
@@ -6,7 +6,7 @@
     <title>My Profile - Online Web Store</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/profile-style.css">
+    <link rel="stylesheet" href="profile.css">
 </head>
 <body>
 
@@ -14,13 +14,14 @@
         <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
         <div id="navbar">
             <ul id="navilist">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a class="active" href="profile.html"><i class="fas fa-user"></i></a></li>
-                <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
-            </ul>
+                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li id="lg-link"><a href="login.html">Login</a></li>
+                    <li id="pr-link" style="display: none;"><a href="myprofile.html"><i class="fas fa-user"></i></a></li>
+                    <li><a href="cart.html"><i class="fas fa-shopping-cart"></i></a></li>
+                </ul>
         </div>
     </section>
 
@@ -86,24 +87,63 @@
     </section>
 
     <footer class="section-p1">
-        <div class="col">
-            <img class="ftlogo" src="img/logo.png" alt="">
-            <h4>Contact</h4>
-            <p><strong>Address:</strong> Ruhunu Arcade, 13 Mile Post, Wellawaya.</p>
-            <p><strong>Phone:</strong> +94 123 456 789</p>
-            <div class="follow">
-                <p><strong>Follow Us</strong></p>
-                <div class="icon">
-                    <i class="fab fa-facebook-f"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-instagram"></i>
-                </div>
+
+            <div class="col">
+                <img class="ftlogo" src="img/logo.png" alt="web_logo_footer">
+                <h4>Contact</h4>
+                <p><strong>Address :</strong> Ruhunu Arcade, 13 Mile Post, Wellawaya. </p>
+                <p><strong>Phone :</strong> +94 123 456 789 / +94 55 123 4567 </p>
+                <p><strong>Open Hours :</strong> Monday - Sunday / 9.00 a.m. - 8.00 p.m. </p>
+                
+
+                    <div class="follow">
+                        <p><strong>Follow Us</strong></p>
+                        <div class="icon">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-youtube    "></i>
+                        </div>
+                    </div>
+                
             </div>
-        </div>
+
+            <div class="col">
+                <h4>Details</h4>
+                <a href="about.html">About us</a>
+                <a href="#">Privacy Policy</a>
+                <a href="contact.html">Contact Us</a>
+                <a href="shop.html">Shop here</a>
+            </div>
+
+            <div class="col">
+                <h4>My Account</h4>
+                <a href="#">Sign In</a>
+                <a href="cart.html">View Cart</a>
+                <a href="cart.html">My WishList</a>
+                <a href="contact.html">Contact</a>
+            </div>
+
+            <div class="col install">
+
+                <h4>Install App</h4>
+                <p>From App Store / Google Play Store</p>
+
+                <div class="row">
+                    <img src="img/pay/app.jpg" alt="apple pay logo">
+                    <img src="img/pay/play.jpg" alt="google pay logo">
+                </div>
+
+                <p>Secured Payment Gateways</p>
+                <img src="img/pay/pay.png" alt="payhere logo">
+
+            </div>
+
+        </footer>
+
         <div class="copyright">
-            <p>&copy; 2026 Online Web Store. All rights reserved.</p>
+                <p id="footercopyright">&copy; 2026 Online Web Store. All rights reserved.</p>
         </div>
-    </footer>
 
     <script>
         function logout() {
@@ -111,6 +151,23 @@
             alert("Logged out successfully!");
             window.location.href = "login.html";
         }
+
+        function updateNav() {
+    const isLoggedIn = sessionStorage.getItem("isLoggedIn");
+    const loginLink = document.getElementById("lg-link");
+    const profileLink = document.getElementById("pr-link");
+
+    if (isLoggedIn === "true") {
+        if (loginLink) loginLink.style.display = "none";
+        if (profileLink) profileLink.style.display = "block";
+    } else {
+        if (loginLink) loginLink.style.display = "block";
+        if (profileLink) profileLink.style.display = "none";
+    }
+}
+
+// Run the function when the page loads
+window.onload = updateNav;
     </script>
 </body>
 </html>
