--- a/about.html
+++ b/about.html
@@ -18,9 +18,9 @@
             
             <div id="navbar">
                 <ul id="navilist">
-                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a class="active" href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li id="lg-link"><a href="login.html">Login</a></li>
                     <li id="pr-link" style="display: none;"><a href="myprofile.html"><i class="fas fa-user"></i></a></li>
