--- a/shop.html
+++ b/shop.html
@@ -60,8 +60,8 @@
 
         <div id="navbar">
             <ul id="navilist">
-                    <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="shop.html">Shop</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a class="active" href="shop.html">Shop</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li id="lg-link"><a href="login.html">Login</a></li>
